--- a/package.json
+++ b/package.json
@@ -8,20 +8,23 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "serve": "vite preview",
     "test:unit": "jest",
-    "test:e2e": "cypress run",
+    "test:e2e": "start-server-and-test dev http://localhost:3000 cypress:run",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-    "format": "prettier .  --write"
+    "format": "prettier .  --write",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "vue": "^3.5.3"
+    "vue": "^3.5.3",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -30,11 +33,14 @@
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/vue3-jest": "^29.2.6",
+    "babel-jest": "^29.7.0",
     "cypress": "^13.14.2",
     "eslint": "^9.10.0",
     "eslint-plugin-vue": "^9.28.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.3.3",
+    "start-server-and-test": "^2.0.6",
     "vite": "^5.4.3"
   }
 }
