--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mowed",
-  "version": "1.0.0",
+  "version": "0.2.0",
   "description": "",
   "main": "index.js",
   "directories": {
@@ -31,12 +31,13 @@
     "@babel/preset-env": "^7.25.4",
     "@vitejs/plugin-vue": "^5.1.3",
     "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/test-utils": "^2.4.6",
+    "@vue/test-utils": "^2.4.0-alpha.2",
     "@vue/vue3-jest": "^29.2.6",
     "babel-jest": "^29.7.0",
     "cypress": "^13.14.2",
     "eslint": "^9.10.0",
     "eslint-plugin-vue": "^9.28.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.3.3",
