--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^4.4.4",
     "vue": "^3.5.3",
     "vuex": "^4.0.2"
   },
