--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "chart.js": "^4.4.4",
     "vue": "^3.5.3",
+    "vue-chartjs": "^5.3.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
